# bigrna-pipeline

./: .gitignore  README.md  build_human_index.sh  main.nf  make_salmon_read_string.py  nextflow.config  pyproject.toml
bigrna_pipeline/: cli.py  main.nf  pubsub.py
