[tool.poetry]
name = "bigrna-pipeline"
version = "0.1.0"
description = ""
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-pubsub = "^1.1.0"
google-cloud-storage = "^1.24.1"
click = "^7.0"

[tool.poetry.scripts]
brpipe = 'bigrna_pipeline.cli:bigrna'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
